<resources>
    <string name="app_name">Kinoman mobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_fragment_title">TopFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail_fragment_title">Detail fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>

    <string name="expanded" translation_description="The label used on a button when a view is in an expanded state.">Expanded</string>
    <string name="collapsed" translation_description="The label used on a button when a view is in an collapsed state.">Collapsed</string>

    <string name="filter_category_title">Категория</string>
    <string name="filter_year_title">Год выпуска</string>
    <string name="filter_country_title">Страна</string>
    <string name="filter_added_title">Добавлен</string>

    <string name="filter_category_description">Категория</string>
    <string name="filter_year_description">Год выпуска</string>
    <string name="filter_country_description">Страна</string>
    <string name="filter_added_description">Добавлен</string>

    <string name="travel_directions_description" translation_description="Instructions on how to find directions to the conference.">Find directions on <a href="https://www.google.com/maps/place/Shoreline+Amphitheatre/@37.4267374,-122.0827818,17z/data=!3m1!4b1!4m5!3m4!1s0x808fb9f776f5e165:0x1ddf014a1b553f3d!8m2!3d37.4267374!4d-122.0805931">Google Maps</a> or <a href="https://mobile-web.waze.com/en/meetup/location?h=9q9hvvru0">Waze</a> to 1 Amphitheatre Pkwy, Mountain View, CA 94043</string>
    <string name="travel_shuttle_description" translation_description="Shuttle service instructions.">Event shuttles will be provided at no charge to all Google I/O attendees from all Google-recommended hotels. There is also select service from San Francisco and other locations along the Peninsula. You must show your Google I/O confirmation email or conference badge to board all Google I/O event shuttles.\n\nEach pick-up location can support accessible vehicles. Please indicate on your registration form if you have any special assistance requirements, and the planning team will follow up with you directly.</string>
    <string name="travel_carpool_parking_description" translation_description="Carpool and parking instructions.">Parking is very limited and available only in Google I/O designated lots located across from Shoreline Amphitheatre along Shoreline Boulevard. There is no event parking along Amphitheatre Parkway or Charleston Road. If you plan to drive, we recommend carpooling with other attendees as preferred parking spaces will be available for cars containing two or more people.</string>
    <string name="travel_ride_sharing_description" translation_description="Ride sharing app instructions and discounts."><b>Waze Carpool</b>\nWaze Carpool is a trusted community of drivers and riders that is available to make your Google I/O commute fun, fast and affordable. Driving? Open <a href="http://Waze.com/get">Waze</a> when you get to the Bay Area. Looking for a ride? Install <a href="http://Waze.com/carpool">Waze Carpool</a> before you arrive. Check back here in the coming weeks for carpool discount codes exclusive to Google I/O attendees.\n\n<b>Lyft Line</b>\nDownload the Lyft app from Google Play and use Lyft Line to share a ride for less with others going the same way.\n<b>Discount code</b>: Googleio18\nThis code is valid from May 8–10, 2018 for shared rides with Lyft Line. It’s redeemable for up to $10 per trip and for up to 250 users per day. Rides must begin or end at Shoreline Amphitheatre.</string>
    <string name="travel_public_transportation_description" translation_description="Public transportation instructions.">Public transit doesn’t go directly to Google I/O. Stay tuned for the exact transportation locations serviced by Google I/O event shuttles.</string>
    <string name="travel_biking_description" translation_description="Bicycle instructions.">Complimentary bike parking will be available at Shoreline Amphitheatre in Parking Lot A. The Silicon Valley Bicycle Coalition will provide secure valet parking for your bicycle from 7am until the event ends each day. There are two trails, Stevens Creek Trail and Permanente Creek Trail, that are convenient for bike riders heading to Shoreline Amphitheatre. Check Google Maps for the best bike routes and directions.\n\nThe Bay Area Bike to Work Day is scheduled on Thursday, May 10th. There will be thousands of cyclists participating near Shoreline and there are hundreds of energizer stations throughout the area. Please check out the Silicon Valley Bike to Work Day website for more information.</string>
</resources>
